# CG

./: .gitattributes  .gitignore  README.md
Assets/Materials/: Parallax.mat
Assets/Playground/: CarpetShader.shader  CarpetTest.mat  ShaderShowcase.unity
Assets/Refreshers/Common/: CameraController.cs  Hashes.cs  MathLib.cs  Utils.cs  Visualizer.cs
Assets/Refreshers/Graph/: FPSCounter.cs  Fractal.cs  FractalGPUBuffer.shader  FractalGPUMaterial.mat  FunctionLibrary.cs  GPUFunctionLibrary.compute  GPUGraph.cs  GPUGraphMaterial.mat  Graph.cs  GraphCSBuffer.shader  GraphColorShader.shader  GraphMaterial.mat  GraphScene.unity  Point.prefab
Assets/Refreshers/Hash/: Hash.unity  HashLib.hlsl  HashMaterial.mat  HashRenderer.shader  Hashing.cs  ShapeGen.cs
Assets/Refreshers/Noise/: Noise.cs  Noise.unity  NoiseGen.Fractal.cs  NoiseGen.Gradient.cs  NoiseGen.Lattice.cs  NoiseGen.LatticeVariants.cs  NoiseGen.cs  (+6 more)
Assets/Scenes/: Depth-of-Field Scene.unity  Depth-of-Field SceneSettings.lighting
Vulkan/: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  appdebug.cpp  assetload.cpp  device_specs.cpp  helium_required.h  heliumdebug.cpp  heliumdebug.h  heliumutils.h  image.cpp  main.cpp  main.h  model.cpp  setup.cpp  shaders.cpp  sync.cpp  validation.cpp  vertex.cpp
Vulkan/objects/: credits.md
Vulkan/objects/kugel_449/: license.txt  scene.gltf
Vulkan/shaders/: compileShaders.zsh  dynamicVertex_v.glsl  f1_helloTriangle.glsl  f2_textureSampling.glsl  f3_gammaCorrection.glsl  helloTriangle_v.glsl  mvpVertex_v.glsl  textureSampling_f.glsl  v2_dynamicVertex.glsl
(+132 files in other folders)
